# MLOPS

./: .dockerignore  README.md  data.dvc  main.py  pyproject.toml  requirements.txt  tasks.py
.dvc/: config
.github/workflows/: codecheck.yaml  tests.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
simple_docker/: cloudbuild.yaml  main.py
src/pumpkin_spice_cookie/: data.py  model.py  train.py  visualize.py
tests/: test_data.py  test_model.py
